--- a/sass/_partials/_schedule.scss
+++ b/sass/_partials/_schedule.scss
@@ -382,6 +382,8 @@ $time-width: 100px;
     }
 
     .btn {
+        z-index: 5;
+
         // Set button to be bigger on mobile
         @include breakpoint(mobile) {
             bottom: initial;
