--- a/sass/_partials/_wp-static.scss
+++ b/sass/_partials/_wp-static.scss
@@ -62,6 +62,11 @@ p {
 
     p {
         font-size: 1.4em;
+
+        &.wp-caption-text {
+            font-size: 1em;
+            color: #6c6c6c;
+        }
     }
 
     > ul > li {
